Carga de pan salado
Es la carga de archivos con las recetas de pan salado

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="PanDulce.html">Pan dulce</a></li>
             <li><a href="Rellenos.html">Rellenos</a></li>
             <li><a href="Masas.html">Masas</a></li>
+            <li><a href="Cotizador.html">Cotizador</a></li>
         </ul>
     </nav>
 </header>
