--- a/Ingredientes.html
+++ b/Ingredientes.html
@@ -31,18 +31,18 @@
         <thead>
             <tr>
                 <th>Ingrediente</th>
-                <th>Peso (g,l, pz)</th>
+                
                 <th>Precio ($)</th>
             </tr>
         </thead>
         <tbody>
         </tbody>
     </table>
-
+    
+    </script>
     <script src="ingredientes.js"></script>
     <script src="Datos.js"></script>
    
-
 
 
 
