--- a/PanSando.html
+++ b/PanSando.html
@@ -16,7 +16,7 @@
             <li><a href="PanSando.html">Pan salado</a></li>
             <li><a href="PanDulce.html">Pan dulce</a></li>
             <li><a href="Rellenos.html">Rellenos</a></li>
-            <li><a href="Masas.html">Masas</a></li>
+            <li><a href="Masas.html"></a></li>
         </ul>
     </nav>
 </header>
@@ -24,27 +24,26 @@
 
 
 <body>
-    Lista de precios de Pan salado 
-    <table>
-        <tr>
-            <th>Producto</th>
-            <th>Precio</th>
-        </tr>
-        <tr>
-            <td>Pan de caja</td>
-            <td>$30.00</td>
-        </tr>
-        <tr>
-            <td>Pan de hamburguesa</td>
-            <td>$25.00</td>
-        </tr>
-        <tr>
-            <td>Pan de hot dog</td>
-            <td>$20.00</td>
-        </tr>
-        <tr>
-            <td>Pan de pita</td>
-            <td>$15.00</td>
-        </tr>
+    <h2 id="tituloPanSalado">Lista de precios de Pan salado </h2> 
+    
+    <table id="tablaPanSalado">
+        <thead>
+            <tr> </tr>
+                <th>Nombre del Pan</th>
+                <th>Precio por Receta</th>
+                <th>Precio por Pieza</th>
+        </thead>
+        <tbody>
+            <!-- Las filas se llenarán dinámicamente con JavaScript -->
+        </tbody>
+    </table>
+
+    <script src="RecetasPanSalado.js"></script>
+
 </body>
+<footer>
+    <div class="footer">
+        <p>Derechos reservados &copy; 2025</p>
+        <p>Contacto:
+</footer>
 </html>
