terminacion de pan dulce
Se agrega mas informacion sobre el pan dulce, se termina la lista de precios de pan dulce, se agregan los titulos de los demas apartados.

--- a/PanDulce.html
+++ b/PanDulce.html
@@ -13,10 +13,12 @@
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="Ingredientes.html">Ingredientes</a></li>
-            <li><a href="PanSando.html">Pan salado</a></li>
+            <li><a href="PanSalado.html">Pan salado</a></li>
             <li><a href="PanDulce.html">Pan dulce</a></li>
             <li><a href="Rellenos.html">Rellenos</a></li>
-            <li><a href="Masas.html">Masas</a></li>
+            <li><a href="Galletas.html">Galletas</a></li>
+            <li><a href="Pasteles.html">Pasteles</a></li>
+            <li><a href="Preparados.html">Preparados</a></li>
         </ul>
     </nav>
 </header>
