--- a/PanDeTemporada.html
+++ b/PanDeTemporada.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rellenos</title>
+    <title>Pan de temporada</title>
     <link rel="stylesheet" href="Style.css">
 </head>
 
@@ -41,14 +41,14 @@
 </header>
 
 
-<h2 id="tituloRellenos">Tabla de Rellenos</h2>
-    <table id="tablaRellenos">
+<h2 id="tituloRellenos">Pan de temporada</h2>
+    <table id="tablaPanDeTemporada">
        
     </table>
 
    
  
-    <script src="Rellenos.js"></script>
+    <script src="panDeTemporada.js"></script>
 <footer>
     <div class="footer">
         <p>Derechos reservados &copy; 2025</p>
